# mtproto-mitm

./: .gitignore  LICENSE  README.md  pyproject.toml
mtproto_mitm/: __main__.py  connection.py  main.py  protocol.py
mtproto_mitm/tl/: __init__.py  core_types.py  serialization_utils.py  tl_object.py
tools/compiler/: tl_compiler.py
tools/compiler/api_layers/: api.tl  api_100.tl  api_102.tl  api_103.tl  api_104.tl  api_105.tl  api_106.tl  api_107.tl  api_108.tl  api_109.tl  api_111.tl  api_112.tl  api_113.tl  api_114.tl  api_116.tl  api_117.tl  api_119.tl  api_120.tl  api_122.tl  api_123.tl  api_124.tl  api_125.tl  api_126.tl  api_128.tl  api_129.tl  api_130.tl  api_131.tl  api_132.tl  api_133.tl  api_134.tl  api_135.tl  api_136.tl  api_137.tl  api_138.tl  api_139.tl  api_140.tl  api_142.tl  api_143.tl  api_144.tl  api_145.tl  (+111 more)
tools/compiler/templates/: combinator.txt
