[tool.poetry]
name = "mtproto-mitm"
version = "0.2.0b2"
description = "Telegram mtproto mitm server."
authors = ["RuslanUC <dev_ruslan_uc@protonmail.com>"]
readme = "README.md"
packages = [{include = "mtproto_mitm"}]
include = ["mtproto_mitm/**/*.py"]

[tool.poetry.dependencies]
python = "^3.11"
pysocks5server = "^0.1.0"
click = "^8.3.1"
mtproto = {git = "https://github.com/RuslanUC/mtproto", extras = ["tgcrypto", "http"]}


[tool.poetry.group.dev.dependencies]
opentele = {git = "https://github.com/thedemons/opentele"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
